--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,26 +1,56 @@
 @import "tailwindcss";
+@tailwind utilities; /* ← これ絶対必要！ */
 
-/* :root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: "Jomolhari";
+  src: url("/fonts/Jomolhari.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@font-face {
+  font-family: "Gerbera";
+  src: url("/fonts/Gerbera.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-} */
+.animated-text {
+  font-size: 48px;
+  font-family: "Jomolhari", serif;
+  fill: none;
+  stroke: #112404;
+  stroke-width: 1px;
+  stroke-dasharray: 500;
+  stroke-dashoffset: 500;
+  animation: draw 5s ease-out forwards;
+}
+
+@keyframes swing {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(10deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(-10deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.swing {
+  animation: swing 2s ease-in-out infinite;
+  transform-origin: bottom;
+}
