--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@tailwind utilities; /* ← これ絶対必要！ */
+@tailwind utilities;
 
 @theme {
   --color-custom-green-1: #739a94;
@@ -29,15 +29,15 @@
   }
 }
 
-.animated-text {
-  font-size: 48px;
-  font-family: "Jomolhari", serif;
+path {
+  /* font-size: 48px; */
+  /* font-family: "Jomolhari", serif; */
   fill: none;
   stroke: #112404;
-  stroke-width: 1px;
-  stroke-dasharray: 500;
-  stroke-dashoffset: 500;
-  animation: draw 3s ease-out forwards;
+  stroke-width: 0.3px;
+  /* stroke-dasharray: 1000;
+  stroke-dashoffset: 1000; */
+  animation: draw 5s ease-out forwards;
 }
 
 @keyframes swing {
